updated Readme, added option to show slide numbers

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -182,3 +182,10 @@ div.desc {
   .image-wrapper {
       position: relative;
   }
+  .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
